# calculator

./: CMakeLists.txt  azure-pipelines.yml
src/: .clang-format  CMakeLists.txt
src/CalcManager/: CMakeLists.txt  CalculatorHistory.cpp  CalculatorManager.cpp  ExpressionCommand.cpp  UnitConverter.cpp  UnitConverter.h  pch.h
src/CalcManager/CEngine/: CalcInput.cpp  CalcUtils.cpp  History.cpp  Number.cpp  Rational.cpp  RationalMath.cpp  calc.cpp  scicomm.cpp  scidisp.cpp  scifunc.cpp  scioper.cpp  sciset.cpp
src/CalcManager/Header Files/: EngineStrings.h
src/CalcManager/Ratpack/: basex.cpp  conv.cpp  exp.cpp  fact.cpp  itrans.cpp  itransh.cpp  logic.cpp  num.cpp  rat.cpp  support.cpp  trans.cpp  transh.cpp
src/CalcViewModel/: ApplicationViewModel.cpp  DateCalculatorViewModel.cpp  HistoryItemViewModel.cpp  HistoryViewModel.cpp  StandardCalculatorViewModel.cpp  UnitConverterViewModel.cpp  ViewState.cpp
src/CalcViewModel/Common/: CalculatorDisplay.cpp  ConversionResultTaskHelper.cpp  CopyPasteManager.cpp  DateCalculator.cpp  NavCategory.cpp  (+6 more)
src/Calculator/: App.xaml.cpp  WindowFrameService.cpp
src/CalculatorUnitTests/: CMakeLists.txt  CalcEngineTests.cpp  CalcInputTest.cpp  CalculatorManagerTest.cpp  CopyPasteManagerTest.cpp  CurrencyConverterUnitTests.cpp  DateCalculatorUnitTests.cpp  HistoryTests.cpp  Module.cpp  MultiWindowUnitTests.cpp  NavCategoryUnitTests.cpp  StandardViewModelUnitTests.cpp  UnitConverterTest.cpp  UnitConverterViewModelUnitTests.cpp  UtilsTests.cpp  pch.h
src/CalculatorUnitTests/Mocks/: MockResourceProvider.cpp  MockResourceProvider.h
(+31 files in other folders)
